# prexel

./: README.md  asset-manifest.json  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: base.rs  config.rs  create.rs  help.rs  mod.rs  reset.rs
cli/src/configs/: .config.yaml  .cute  .help
cli/src/constants/: command.rs  config.rs  esc_seq.rs  general.rs  mod.rs
cli/src/extensions/: integer_traits.rs  mod.rs  string_traits.rs
cli/src/utils/: general.rs
client/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/public/: index.html
client/src/: App.tsx  index.css
public/: index.html
src/: App.tsx  index.css  prexel.js
src/ColorPicker/: ColorPicker.js  styles.css
src/Pages/: Editor.tsx  Marketplace.tsx
src/components/: Artboard.tsx  ClearModal.tsx  ColorPicker.tsx  ControlBar.tsx  DimensionBox.tsx  Divider.tsx  DragHandle.tsx  GridCell.tsx  IconButton.tsx  MenuBar.tsx  SaveModal.tsx  Swatch.tsx
src/contexts/: ColorPickerBoxProvider.tsx  ControlBarProvider.tsx  DarkModeProvider.tsx  KeybindProvider.tsx  ThemeProvider.tsx
src/hooks/: useControlBarContext.tsx  useDarkModeContext.tsx  useFetch.tsx  useKeybindContext.tsx  useLocalStorage.tsx
src/utils/: apiConstants.ts  colorUtils.ts  constants.ts  export.js  generateUtils.ts  handler.js  platformUtils.ts  selection.min.js  utils.js
static/css/: main.32a4c481.css  main.32a4c481.css.map  main.357f676d.css  main.357f676d.css.map  main.ba3b3bb4.css  (+9 more)
(+71 files in other folders)
